transform date, fix dependency

--- a/e2e/_src/post.html
+++ b/e2e/_src/post.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h2>{ post.title }</h2>
-    <address>Last updated at <time>{ post.date.toISOString().slice(0, 10) }</time></address>
+    <address>Last updated at <time>{ post.date }</time></address>
     { post.html }
   </body>
 </html>
